# kubernetes-to-puml

./: README.md  pyproject.toml
kubernetes_to_puml/: k2p.py
